--- a/src/assets/sass/components/align.scss
+++ b/src/assets/sass/components/align.scss
@@ -11,7 +11,8 @@ $verticals:(middle, baseline, top);
     
 }
 .vertical-middle{
-    & > view,
+    text-align: center;
+    & > *,
     &:after{
         display: inline-block;
         vertical-align: middle;
