--- a/src/assets/sass/components/form.scss
+++ b/src/assets/sass/components/form.scss
@@ -1,11 +1,38 @@
+@import '../lib/function.scss';
+
 form{
     display: block;
 }
 input{
-    height: inherit;
-    display:inline-block; 
-    line-height: 1;
-    vertical-align: middle;
-    font-weight: 300;
-    box-sizing: border-box;
+    margin: 0;
+    max-width: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    outline: 0;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
+    text-align: left;
+    line-height: 1.21428571em;
+    font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+    padding: .67857143em 1em;
+    background: #fff;
+    border: 1px solid rgba(34,36,38,.15);
+    border-radius: rem(8);  
+    -webkit-transition: border-color .1s ease,-webkit-box-shadow .1s ease;
+    transition: border-color .1s ease,-webkit-box-shadow .1s ease;
+    transition: box-shadow .1s ease,border-color .1s ease;
+    transition: box-shadow .1s ease,border-color .1s ease,-webkit-box-shadow .1s ease;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+
+    &::placeholder{
+        color: rgb(211, 209, 209);
+    }
+
+    &:focus{
+        border: 1px solid rgb(138, 133, 206);
+        &::placeholder{
+            color: rgb(184, 182, 182);
+        }
+    }
 }
