--- a/src/assets/sass/lib/function.scss
+++ b/src/assets/sass/lib/function.scss
@@ -1,8 +1,62 @@
+@import './vars';
 /*
-* rpx（responsive pixel）: 可以根据屏幕宽度进行自适应。规定屏幕宽为750rpx。如在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则750rpx = 375px = 750物理像素，1rpx = 0.5px = 1物理像素。
-* 设计稿750 1px = 2rpx
-* 设计稿px转rpx单位
+* 1rem = 100px  1px = 0.01rem 10 = 0.1rem 
 */
-@function pxTorpx($value){
-    @return $value * 2rpx;
+@function rem($value){
+    @return #{$value / 100}rem;
+}
+
+/// Removes a specific item from a list.
+/// @author Hugo Giraudel
+/// @param {list} $list List.
+/// @param {integer} $index Index.
+/// @return {list} Updated list.
+@function remove-nth($list, $index) {
+    $result: null;
+    @if type-of($index) != number {
+        @warn "$index: #{quote($index)} is not a number for `remove-nth`.";
+    }
+    @else if $index == 0 {
+        @warn "List index 0 must be a non-zero integer for `remove-nth`.";
+    }
+    @else if abs($index) > length($list) {
+        @warn "List index is #{$index} but list is only #{length($list)} item long for `remove-nth`.";
+    }
+    @else {
+        $result: ();
+        $index: if($index < 0, length($list) + $index + 1, $index);
+        @for $i from 1 through length($list) {
+
+            @if $i != $index {
+                $result: append($result, nth($list, $i));
+            }
+
+        }
+    }
+    @return $result;
+}
+
+/**
+ * 获取配置参数值
+ * @author Hugo Giraudel
+ * @param {map} $map Map
+ * @param {string} $keys Key(s)
+ * @return {string} Value
+ */
+@function val($map, $keys...) {
+    @if nth($keys, 1) == null {
+        $keys: remove-nth($keys, 1);
+    }
+    @each $key in $keys {
+        $map: map-get($map, $key);
+    }
+    @return $map;
+}
+
+@function _palette($keys...) {
+    @return val($palette, $keys...);
+}
+
+@function _font($keys...) {
+    @return val($font, $keys...);
 }
