--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -9,12 +9,34 @@
 @import './components/box-model';
 @import './components/background';
 
+@import './lib/mixin';
 @import './lib/function';
 
+@include skel-layout((
+    reset      : 'normalize',
+    boxModel   : 'border',
+));
+
+@include create-border();
+
+body, html{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+body{
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #ececec;
+}
 
 input, textarea, select, button{
     text-rendering: auto;
-    color         : initial;
     letter-spacing: normal;
     word-spacing  : normal;
     text-transform: none;
@@ -25,4 +47,6 @@ input, textarea, select, button{
     margin        : 0em;
     color         : _font(colors, main);
     font-size     : rem(_font(size, main));
+    -webkit-appearance: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
