--- a/src/assets/sass/components/fonts.scss
+++ b/src/assets/sass/components/fonts.scss
@@ -3,8 +3,8 @@
 /*************************
  $size
 **************************/
-$base    : 20px;//基数
-$multiple: 2;   //倍数
+$base    : 0.2rem; //基数
+$multiple: 0.02;   //倍数
 $sizes:(
     mini  : 0,
     tiny  : 1,
