--- a/src/assets/sass/lib/vars.scss
+++ b/src/assets/sass/lib/vars.scss
@@ -21,4 +21,11 @@ $font:(
     size:(
         main: 28
     )
-)
+);
+
+$border:(
+    colors:(
+        main : #d3d2d2,
+        hover: #8c31ff
+    )
+);
