--- a/src/components/container/style.scss
+++ b/src/components/container/style.scss
@@ -3,7 +3,13 @@
     height    : 100%;
     overflow-y: scroll; 
     position  : fixed;
-    font-size : rem(28);
+    font-size : rem(_font(size, main));
     color     : _font(colors, main);
     -webkit-overflow-scrolling: touch;
+}
+
+.container{
+    height: 100%;
+    position: relative;
+    background-color: #ececec;
 }
