--- a/src/assets/sass/components/box-model.scss
+++ b/src/assets/sass/components/box-model.scss
@@ -1,3 +1,4 @@
+@import '../lib/function';
 /*************************
  border
 **************************/
@@ -9,70 +10,80 @@ $palette:(
 $alias:('row','col','top','left','bottom','right','');
 $c1:map-get($palette, c1);
 
-@mixin create-border(){
-    $var:solid 1rpx $c1;
-    @for $i from 1 through length($alias){
-        $dir:nth($alias,$i);
-        @if $dir == 'row'{
-            &.#{$dir}{
-                border-left: $var;
-                border-right: $var
+
+@mixin hairline($dir, $color: #d3d2d2){
+    $dprs:(1.5,2,3,4);
+    &::before,
+    &::after{
+        z-index         : 100;
+        top             : 0;
+        left            : 0;
+        content         : '';
+        position        : absolute; 
+        background-color: $color;
+    }
+
+    @if $dir == 'top' or $dir == 'bottom'{
+        &::before{
+            width           : 100%;
+            height          : 1px;
+            transform-origin: 50% 0%;    
+            @for $i from 1 through length($dprs){
+                $dpr:nth($dprs,$i);
+                @media only screen and (-webkit-min-device-pixel-ratio: $dpr),(min-device-pixel-ratio: $dpr) {
+                     transform        : scaleY(1/$dpr);
+                     -webkit-transform: scaleY(1/$dpr);
+                }
             }
-        }
-        @else if $dir == 'col'{
-            &.#{$dir}{
-                border-top: $var;
-                border-bottom: $var;
-            }
-        }
-        @else if $dir == 'top' or $dir == 'bottom' or $dir == 'left' or $dir == 'right'{
-            &.#{$dir}{
-                border-#{$dir}:$var;
-            }
-        }
-        @else {
-            &.all{
-                border:$var;
+            @if $dir == 'bottom'{
+                top             : auto !important;
+                bottom          : 0;
+                transform-origin: 50% 100%;
             }
         }
     }
-}
-.border{
-    $var:solid 1rpx $c1;
-    @include create-border();
-    // &.all{
-    //    border:$var;
-    // }
-    // &.row{
-    //     border-left: $var;
-    //     border-right: $var;
-    // }
-    // &.col{
-    //     border-top: $var;
-    //     border-bottom: $var; 
-    // }
-    // &.left{
-    //     border-left: $var;
-    // }
-    // &.right{
-    //     border-right: $var;
-    // }
-    // &.top{
-    //     border-top: $var;
-    // }
-    // &.bottom{
-    //     border-bottom: $var;
-    // }
+    @else if $dir == 'left' or $dir == 'right'{
+        &::after{
+            width           : 1px;
+            height          : 100%;
+            transform-origin: 0 50%;
+            @for $i from 1 through length($dprs){
+                $dpr:nth($dprs,$i);
+                @media only screen and (-webkit-min-device-pixel-ratio: $dpr),(min-device-pixel-ratio: $dpr) {
+                     transform        : scaleX(1/$dpr);
+                     -webkit-transform: scaleX(1/$dpr);
+                }
+            }
+            @if $dir == 'right'{  
+                left            : auto !important;
+                right           : 0;
+                transform-origin: 100% 50%;
+            }
+        }
+    }
 };
+
+@mixin create-border(){
+    $direction:(top, left, bottom, right);
+    .border{
+        position: relative;
+        @for $i from 1 through length($direction){
+            $dir:nth($direction, $i);
+            &.#{$dir}{
+                @include hairline($dir);
+            }
+        };
+    }
+}
 
 /*************************
  border-radius
 **************************/
-$multiple: 1px;
+$multiple: 1;
 .border{
     @for $i from 1 through 20 {
         &.radius#{$i}{
-            border-radius: $i * $multiple;
+            border-radius: rem($i * $multiple);
         }
     }
 };
@@ -81,9 +92,9 @@ $multiple: 1px;
  margin && padding
 **************************/
 @mixin boxModel($step:5){
-    @for $i from 1 through 10{
+    @for $i from 1 through 15{
         $number: $step   * $i;
-        $var   : $number * 1px;
+        $var   : rem($number * 1);
         @for $j from 1 through length($alias){
             $dir:nth($alias,$j);
             @if $dir == 'row'{
