--- a/src/assets/sass/components/form.scss
+++ b/src/assets/sass/components/form.scss
@@ -12,27 +12,34 @@ input{
     outline: 0;
     -webkit-tap-highlight-color: rgba(255,255,255,0);
     text-align: left;
-    line-height: 1.21428571em;
+    line-height: 1.6em;
     font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
-    padding: .67857143em 1em;
-    background: #fff;
-    border: 1px solid rgba(34,36,38,.15);
+    padding: 0.87857143em 1em;
+    background: transparent;
+    border: solid 1px transparent;
     border-radius: rem(8);  
-    -webkit-transition: border-color .1s ease,-webkit-box-shadow .1s ease;
-    transition: border-color .1s ease,-webkit-box-shadow .1s ease;
-    transition: box-shadow .1s ease,border-color .1s ease;
-    transition: box-shadow .1s ease,border-color .1s ease,-webkit-box-shadow .1s ease;
+    // -webkit-transition: border-color .1s ease,-webkit-box-shadow .1s ease;
+    // transition: border-color .1s ease, -webkit-box-shadow .1s ease;
+    // transition: box-shadow .1s ease, border-color .1s ease;
+    // transition: box-shadow .1s ease, border-color .1s ease, -webkit-box-shadow .1s ease;
     -webkit-box-shadow: none;
     box-shadow: none;
+    // transition: all .5s;
 
     &::placeholder{
         color: rgb(211, 209, 209);
     }
 
-    &:focus{
-        border: 1px solid rgb(138, 133, 206);
-        &::placeholder{
-            color: rgb(184, 182, 182);
+    &.focus{
+        &:focus{
+            border: 1px solid rgb(138, 133, 206);
+            &::placeholder{
+                color: rgb(184, 182, 182);
+            }
         }
     }
 }
+.fluid.input{
+    display: flex;
+}
+
