--- a/src/assets/sass/lib/mixin.scss
+++ b/src/assets/sass/lib/mixin.scss
@@ -1,3 +1,5 @@
+@import './vars';
+
 // List数据类型设置CSS样式
 @mixin list-factory($list, $key){
     @for $i from 1 through length($list){
@@ -17,3 +19,75 @@
     }
 }
 
+@mixin reset($mode:'normalize'){
+    @if $mode == 'normalize'{
+        /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+        html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:0;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+    }
+    @else if $mode == 'full'{}
+}
+
+/// 设置全局盒模型
+/// @param {string} $model Model(默认使用怪异盒模型)
+@mixin boxModel($model:'border'){
+    $x: $model + '-box';
+    html{
+        box-sizing: #{$x};
+        -moz-box-sizing:#{$x};
+        -webkit-box-sizing: #{$x};
+    }
+    *,
+    *::after,
+    *::before{
+        box-sizing: inherit;
+        -moz-box-sizing:inherit;
+        -webkit-box-sizing: inherit;
+        -webkit-touch-callout:none; // 禁用系统默认菜单
+    }
+}
+
+@mixin skel-layout($config: ()) {
+    //重置样式
+    $x: map-get($config, 'reset');
+    @if($x){
+        @include reset($x);
+    }
+
+    //统一盒模型
+    $x:map-get($config, 'boxModel');
+    @if($x){
+        @include boxModel($x);
+    }
+}
+
+
+%border-scale{
+    // position: absolute;
+    // top: auto;
+    // bottom: 0px;
+    // left: 0;
+    // width: 100%;
+    // height: 1px;
+    // content: '';
+    // transition: all .3s;
+    // backface-visibility: hidden;
+    // transform: scale3d(0, 0, 0);
+    // transform-origin: center;
+    // perspective: 1000;
+    // z-index: -1;
+    position: absolute;
+    top: auto;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #8c31ff;
+    content: '';
+    transition: all .3s;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transform: scale3d(0, 0, 0);
+    transform-origin: center;
+    perspective: 1000;
+    z-index: -1;
+}
