--- a/src/assets/sass/components/flex.scss
+++ b/src/assets/sass/components/flex.scss
@@ -15,7 +15,7 @@
     &.column{
         flex-direction: column;
     } 
-    .child{
+    &-item{
         position: relative;
         flex-grow: 1;
         align-self: stretch;
