--- a/src/assets/sass/lib/function.scss
+++ b/src/assets/sass/lib/function.scss
@@ -95,3 +95,13 @@
         }
     }
 }
+
+%center{
+    &{
+        position: relative;
+    }
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    transform: translate3d(-50%, -50%, 0);
+}
