--- a/src/assets/sass/components/flex.scss
+++ b/src/assets/sass/components/flex.scss
@@ -1,8 +1,8 @@
 .flex{
-    display       : flex;
-    flex-wrap     : nowrap; 
-    flex-direction: row;
-    align-items: stretch;
+    display: flex;
+    flex-wrap: wrap;
+    // flex-direction: row;
+    // align-items: stretch;
     &.center{
         text-align: center;
     }
@@ -25,6 +25,11 @@
         &.self-center{
             align-self: center;
         }
+    }
+    .child{
+        flex-grow: 1;
+        position: relative;
+        align-self: center;
     }
 }
 
